# books

./: .gitignore  LICENSE  Makefile.am  README.md  application.js  autogen.sh  books  configure.ac  detailsWindow.js  mainWindow.js  workModel.js
data/: Makefile.am  org.gnome.Books.desktop.in  org.gnome.Books.service.in
src/: Makefile.am  application.js  detailsWindow.js  gnome-books.in  localProvider.js  main.js  mainWindow.js
